[package]
name = "wavefc-cli"
authors = ["Zachary Morden"]
version = "3.1.0"
edition = "2021"
license = "MIT"
description = "A home-grown implementation of the Wave Function Collapse algorithm."
readme = "../README.md"
repository = "https://github.com/SetKu/WaveFuncCollapse"
keywords = ["wave", "collapse", "procedural", "generation"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
wavefc = { version = "3.1.6" }
image = "0.24.5"
chrono = { version = "0.4.23", features = ["std"] }
open = "3.2.0"
