[package]
name = "wavefc"
authors = ["Zachary Morden"]
version = "3.1.6"
edition = "2021"
license = "MIT"
description = "A home-grown implementation of the Wave Function Collapse algorithm."
readme = "../README.md"
repository = "https://github.com/SetKu/WaveFuncCollapse"
keywords = ["wave", "collapse", "procedural", "generation"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
rand = { version = "0.8.5", features = ["alloc"] }
serde = { version = "1.0.148", optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "helpers"
harness = false # disable default benchmarking system (using Criterion instead)

[[bench]]
name = "lib"
harness = false # disable default benchmarking system (using Criterion instead)
