[package]
name = "wfc-cli"
authors = ["Zachary Morden"]
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "A home-grown implementation of the Wave Function Collapse algorithm."
readme = "../README.md"
repository = "https://github.com/SetKu/WaveFuncCollapse"
keywords = ["wave", "collapse", "procedural", "generation"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
wfc = { path = "../wfc" }
